[package]
name = "sha1test"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1.0"
openssl = "0.10.26"
rand = "0.7.3"
hyper = "0.13"
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
